first draft of appendix

--- a/abccaretreatmenteffects_report_main_appendix.tex
+++ b/abccaretreatmenteffects_report_main_appendix.tex
@@ -55,7 +55,7 @@ The University of Chicago}
 	\end{figure}
 \end{center}
 
-\noindent Figure~\ref{figure:hridistabc} displays the distribution of the HRI among all participants. All children were substantially disadvantaged. Mean maternal age when the target child was born was 19.9 years, and approximately half of the mothers of both treatment and control groups were aged 19 years or younger. Maternal age at target child's birth ranges from 13 to 43 years of age. One third of mothers were 17 or younger. Mean maternal IQ for both groups was approximately 85, one standard deviation below the national mean. Only 25\% of the ABC children lived with both biological parents, and more than 50\% lived with extended families in multi-generational households (61\% of treated children and 56\% of control children).\footnote{\citet{Ramey_Campbell_1991_childreninpoverty,Campbell_Ramey_1994_CD}.}\\
+\noindent Figure~\ref{figure:hridistabc} displays the distribution of the HRI among all participants. All children were substantially disadvantaged. Mean maternal age when the target child was born was 19.9 years, and approximately half of the mothers of both treatment and control groups were aged 19 years or younger. Maternal age at target child's birth ranges from 13 to 43 years of age. One third of mothers were 17 or younger. Mean maternal IQ for both groups was approximately 85, one standard deviation below the national mean. Only 25\% of the ABC children lived with both biological parents, and more than 50\% lived with extended families in multi-generational households (61\% of treatment-group children and 56\% of control-group children).\footnote{\citet{Ramey_Campbell_1991_childreninpoverty,Campbell_Ramey_1994_CD}.}\\
 
 \subsubsection{Randomization Protocol and Compromises}
 
@@ -82,22 +82,53 @@ Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1
 
 \noindent The families of $70\%$ of the control-group children had access to high-quality childcare. We refer to this phenomenon as treatment substitution; accounting for it is fundamental when evaluating the program, as we argue in Section~\ref{section:methodology}. In this appendix, we thoroughly describe the characteristics and costs of the childcare centers providing alternative treatment, in an intent to create a comparison to the treatment offered by ABC.\\
 
-\noindent The centers in which most of the children in the control group took-up an alternative to the treatment ABC offered received federal subsidies and, therefore, were regulated by the Federal Interagency of Day Care Requirements (see Figure~\ref{fig:cc}). They were required to have staff trained and and able to implement curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} These centers offered high-quality center-based care.
+\noindent The centers in which most of the children in the control group took-up an alternative to the treatment ABC offered received federal subsidies and, therefore, were regulated by the Federal Interagency of Day Care Requirements (see Figure~\ref{fig:ccabc}). They were required to have staff trained and and able to implement curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} These centers offered high-quality center-based care.
 
 \begin{center}
 	\begin{figure}[H]
-		\caption{Treatment Substitution, ABC}
-		\label{fig:cc}
+		\caption{Treatment Substitution, ABC} \label{fig:ccabc}
 		\centering
-		\includegraphics[height=3.5in]{output/abc/controlcontamination/blackwhite_CCnumber.eps}
-		
-		\footnotesize
-
-		\floatfoot{
-		\noindent Note: This figure describes the take-up of center-based childcare by families in the control group. The vertical axis represents the average number of months per year the children of the control group spent in center-based childcare. Subsidized centers were highly regulated and, therefore, high-quality. Non-subsidized childcare services were center-based but not regulated. Other services could have included care by parents, relatives, or non-relatives.
-		}
+		\includegraphics[width=.9\columnwidth]{output/blackwhite_CCnumber.eps}
+\floatfoot{
+\footnotesize
+\noindent Note: This figure describes the take-up of center-based childcare by families in the control group. The vertical axis represents the average number of months per year the children of the control group spent in center-based childcare. Subsidized centers were highly regulated and, therefore, high-quality. Non-subsidized childcare services were center-based but not regulated. Other services could have included care by parents, relatives, or non-relatives.}
 	\end{figure}
 \end{center}
+
+\paragraph{Regulation}
+
+\noindent During the ABC program, North Carolina had a active, high-quality system of public childcare for vulnerable families. Several public programs funded the system. Examples include Title IV-A of the Social Service Administration (SSA), Aid to Families with Dependent Children (AFDC), and Title IV-B of Child Welfare Services. These funding efforts were amplified in 1975 by Title XX of the SSA, Social Sciences Block Grant, which was the main federal source of childcare financing in the US when ABC was active.\footnote{Consistently, control-group children in ABC had lower access if they belonged to the 1972-1975 cohorts, if compared to the post-1975 cohorts.}$^{,}$\footnote{\citet{Robins_1988_Federal-Child-Care}.}\\
+
+\noindent Federally funded childcare services were regulated by the Federal Interagency of Day Care Requirements, which defined stringent regulation for center-based program for children aged between 3 and 6 years old.\footnote{\citet{Department-of-Health_1968_DayCareRequirements}.} These requirements were enforced and childcare providers were aware of them.\footnote{\citet{Kuperman_2015_Clifford-Russell-Interview}.} Additionally, North Carolina had a mandatory licensing laws for childcare facilities. This regulation is what applied to centers serving children below the age of 3 because FIDCR applied to centers for older children (aged 3 to 6). The relative weakness of this regulation\footnote{\citet{NCGA_1971_House-Bill-100}.} is not very relevant for our study because treatment substitution happened after age 3. Table~\ref{table:staff} compares a widely-used quality standard, child-staff ratio, between the North Carolina and FIDCR standards and the actual ABC numbers.
+
+%Not in main paper
+\begin{table}[H]
+\caption{Child-Staff Ratios for North Carolina, FIDCR, and Actual ABC Ratios}
+\label{table:staff}
+\begin{threeparttable}
+\begin{tabular}{lccc}
+\hline \hline
+ &NC Standards &	&  \\
+Age	& Level I & FIDCR Standards  & ABC Ratios\\ \hline
+0--1	& 6:1*	&  				& 	3:1					\\
+1--2	& 8:1* 	& 				&   4-5:1				\\
+2--3	& 12:1* & 				& 	4-5:1				\\
+3--4	& 15:1 	& 		5:1*	& 	4-5:1 				\\
+4--5	& 20:1 	& 		7:1*	& 	5-6:1 				\\
+5--6 & 25:1  &		7:1*	&	5-6:1				\\
+\hline \hline
+\end{tabular}
+\begin{tablenotes}
+\footnotesize
+Sources: \cite{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach} \\
+Note: The starred ratios represent the ones we believe were the most relevant for ABC control-group children.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\paragraph{Costs}
+
+\noindent Center-based childcare centers had a uniform rate for subsidy-eligible children, independent of what program the children were they eligible for. This was mandated by the County Departments of Social Services. The most common way for a child to be eligible was by belonging to a poor family with either a single mother who worked or studied or with both parents either working or studying. Other conditions, such as abuse risk, were also considered. Our information on the rates paid is limited. Anecdotal evidence indicates that the subsidy value for full-time center-based childcare was around \$300 at the time.\footnote{\citet{Kuperman_2015_Clifford-Russell-Interview}.}
 
 \subsubsection{Program Description and Content}
 
@@ -126,7 +157,7 @@ Sources: \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_Smith_1
 
 \paragraph{Medical Care and Nutrition}
 %Direct from the paper
-ABC was conducted in conjunction with a longitudinal medical research study on infectious respiratory diseases in group environments, and thus provided comprehensive on-site medical care.\footnote{\citet{Henderson-et-al_1982_NEJoM}.} Treatment group children were monitored daily for signs of illness. All treated children received medical care while in center-based childcare; the first cohort of control children also received medical care during the first year of the program's existence.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Ramey_Campbell_1991_childreninpoverty,Campbell_Ramey_1994_CD}.}$^{,}$\footnote{Both children in the treatment and control groups of the first cohort received free medical care provided by ABC. The control group of the first cohort only received medical care in the first year of the program; the treatment group of the first cohort received medical for all years of the program. In the subsequent cohorts, only children in the treatment group received free medical care provided by ABC. As randomization into treatment and control groups was conditional on cohort, we control for cohort when estimating the treatment effects. This prevents changes in the ABC program across cohorts, such as restricting medical services only to the treatment group, from biasing our estimates.}\\
+ABC was conducted in conjunction with a longitudinal medical research study on infectious respiratory diseases in group environments, and thus provided comprehensive on-site medical care.\footnote{\citet{Henderson-et-al_1982_NEJoM}.} Treatment group children were monitored daily for signs of illness. All treated children received medical care while in center-based childcare; the first cohort of control-group children also received medical care during the first year of the program's existence.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject,Ramey_Campbell_1991_childreninpoverty,Campbell_Ramey_1994_CD}.}$^{,}$\footnote{Both children in the treatment and control groups of the first cohort received free medical care provided by ABC. The control group of the first cohort only received medical care in the first year of the program; the treatment group of the first cohort received medical for all years of the program. In the subsequent cohorts, only children in the treatment group received free medical care provided by ABC. As randomization into treatment and control groups was conditional on cohort, we control for cohort when estimating the treatment effects. This prevents changes in the ABC program across cohorts, such as restricting medical services only to the treatment group, from biasing our estimates.}\\
 %Direct from the paper
 
 \noindent Primary pediatric care was provided by a family nurse practitioner and a licensed practical nurse, both under the supervision of one pediatrician on continuous duty at the center.\footnote{\citet{Haskins-et-al_1978_JoPP}.} The medical staff provided regularly scheduled well-child check-ups, immunizations, parental counseling, and initial assessment of illnesses.\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC}.} A licensed practical nurse visited classrooms daily for up to two hours to monitor the children's health status.\footnote{\citet{Sanyal_Henderson_etal_1980_JoPediatrics}.} This part of the treatment was free of charge to the parents. However, it was the policy of the medical staff to refer families to a community hospital for serious treatment. While ABC provided aspirin, immunizations, and basic medicines, families were responsible for purchasing any prescription medication subjects required. There is no data currently available on treatment received for serious conditions or use of prescription medication. The treated group received standard check-ups when they were 2, 4, 6, 9, 12, 18, and 24 months old and annually thereafter. While in treatment, they also received the standard immunizations.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} Infants were supplied with iron-fortified formula. Children past 15 months of age were provided breakfast, lunch, and an
@@ -162,7 +193,7 @@ Note: This plot shows the number of participants, by experimental group, for who
 
 \subsection{CARE}
 
-\noindent \textbf{[JLG: Anna and Yu Kyun working in this subsection of CARE, as part of the objective of their April 2016 trip]}.
+\noindent \textbf{[JLG: Anna and Yu Kyung working in this subsection of CARE, as part of the objective of their April 2016 trip]}.
 
 %References
 \renewcommand{\refname}{Appendix References}
