accouting for matt's edits and abc program appendix done

--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -51,6 +51,7 @@ Health Follow-up & Ages 30--34&\checkmark\\
 \footnotesize
 \begin{tablenotes}
 \item Note: This table compares the main elements of ABC and CARE, summarized within this section.
+\item A \checkmark indicates that ABC and CARE had the same characteristic.
 \end{tablenotes}
 \end{threeparttable}
 \end{center}
