--- a/abccaretreatmenteffects_report_main_appendix.tex
+++ b/abccaretreatmenteffects_report_main_appendix.tex
@@ -182,7 +182,7 @@ Our evaluation is based on a very wide variety of outcomes, which we describe in
 \begin{figure}[H]
 \caption{Attrition by Age} \label{fig:attrition}
     \centering
-  \includegraphics[height=2.5in]{output/abc_attrition.eps}
+  \includegraphics[width=.9\columnwidth]{output/abc_attrition.eps}
   \floatfoot{
 \footnotesize
 Note: This plot shows the number of participants, by experimental group, for whom there exists data at the periods of data collection. The children who were withdrawn from the study were done so due to several reasons including adoption. Children were not followed if they were found to be biologically retarded after randomization. The numbers in the bars indicate the number of individuals who were interviewed during that data collection. The original sample was measured after randomization but before the start of the program. The baseline sample was measured at the start of the program. The health sample was collected at age 34.
